releng: Stop playing with PermSize.
-XX:PermSize=256m -XX:MaxPermSize=256m are deprecated and ignored in
Java 8 and the build has been failing for a month already with the only
hudson job using Java 7 (sonar) so let's just get rid of these noise.

Change-Id: Ic3d588086efec40d3a3080cfd66ab1b4171e7840
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>
Reviewed-on: https://git.eclipse.org/r/52097
Tested-by: Hudson CI