@@ -91,7 +91,7 @@
                 </dependency>
               </dependencies>
               <product>org.eclipse.platform.ide</product>
-	      <argLine>${tycho.testArgLine} -Xms512m -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m -Declipse.valgrind.tests.runValgrind=no -Dorg.eclipse.swt.browser.UseWebKitGTK=true</argLine>
+	      <argLine>${tycho.testArgLine} -Xms512m -Xmx1024m -Declipse.valgrind.tests.runValgrind=no -Dorg.eclipse.swt.browser.UseWebKitGTK=true</argLine>
 	    </configuration>
 	  </plugin>
           <plugin>
@@ -316,7 +316,7 @@
                </dependency>
             </dependencies>
             <product>org.eclipse.platform.ide</product>
- 	    <argLine>${tycho.testArgLine} -Xms512m -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m</argLine>
+ 	    <argLine>${tycho.testArgLine} -Xms512m -Xmx1024m</argLine>
 	  </configuration>
 	</plugin>
         <plugin>
